--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -12,7 +12,7 @@
           <div class="burgers__section">
             <h2 class="burgers__name">Double Cheese &amp; Bacon</h2>
             <div class="burgers__resturant">Tio Peppes</div>
-            <img class="burgers__img" src="/images/burger1.jpg" alt="burger">
+            <img class="burgers__img" src="/images/burger1.JPG" alt="burger">
             <div class="burgers__rating">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
@@ -24,7 +24,7 @@
           <div class="burgers__section">
             <h2 class="burgers__name">Double Cheese</h2>
             <div class="burgers__resturant">Burger King</div>
-            <img class="burgers__img" src="/images/burger2.jpg" alt="burger">
+            <img class="burgers__img" src="/images/burger2.JPG" alt="burger">
             <div class="burgers__rating">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
