--- a/src/views/partials/schedule.ejs
+++ b/src/views/partials/schedule.ejs
@@ -1,52 +1,17 @@
 <table class="schedule">
   <tbody>
     <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
+      <td class="schedule__td">12 Okt 18.00</td>
       <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
+        <h2 class="schedule__h2">@Burger</h2>
+        <div class="schedule__text">Storgatan 25</div>
       </td>
     </tr>
     <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
+      <td class="schedule__td">2 Nov 18.00</td>
       <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
-      </td>
-    </tr>
-    <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
-      <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
-      </td>
-    </tr>
-    <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
-      <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
-      </td>
-    </tr>
-    <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
-      <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
-      </td>
-    </tr>
-    <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
-      <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
-      </td>
-    </tr>
-    <tr>
-      <td class="schedule__td">22 Sep 17.00</td>
-      <td class="schedule__td">
-        <h2 class="schedule__h2">Tio Peppes</h2>
-        <div class="schedule__text">Kungsbacka gatan 21</div>
+        <h2 class="schedule__h2">Burgersson</h2>
+        <div class="schedule__text">Skanstorget 4</div>
       </td>
     </tr>
   </tbody>
