--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -94,8 +94,7 @@ ul {
   width: 44px;
   height: 44px;
   cursor: pointer;
-  transform: rotate(-27deg);
-  background: url(/images/logo.svg);
+  background: url(/images/menu_icon.svg);
   position: absolute;
   top: 8px;
   left: 8px;
