--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -11,21 +11,12 @@
         <div class="burgers">
           <div class="burgers__section">
             <h2 class="burgers__name">Double Cheese &amp; Bacon</h2>
-            <div class="burgers__resturant">Tio Peppes</div>
+            <div class="burgers__resturant">2112 </div>
+            <div class="burgers__resturant-street">Magasinsgatan 5</div>
             <img class="burgers__img" src="/images/burger1.JPG" alt="burger">
             <div class="burgers__rating">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
-              <img src="/images/logo.svg" alt="logo">
-              <img src="/images/logo.svg" alt="logo">
-              <img src="/images/logo.svg" alt="logo">
-            </div>
-          </div>
-          <div class="burgers__section">
-            <h2 class="burgers__name">Double Cheese</h2>
-            <div class="burgers__resturant">Burger King</div>
-            <img class="burgers__img" src="/images/burger2.JPG" alt="burger">
-            <div class="burgers__rating">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
