--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -10,14 +10,28 @@
       <% include ./partials/menu %>
         <div class="members">
           <div class="members__section">
-            <h2 class="members__name">Daniel Dumkopf</h2>
-            <div class="members__title">President</div>
-            <img class="members__img" src="/images/danne.jpg" alt="old man">
+            <h2 class="members__name">Daniel</h2>
+            <div class="members__title">Buktalare</div>
           </div>
           <div class="members__section">
-            <h2 class="members__name">Svullo Norén</h2>
-            <div class="members__title">Vice President</div>
-            <img class="members__img" src="/images/svullo.jpg" alt="old man">
+            <h2 class="members__name">Nicke Minag</h2>
+            <div class="members__title">Vice Buktalare</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">D Mossad</h2>
+            <div class="members__title">Sgt at arms</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Tims Pappa</h2>
+            <div class="members__title">Chief Toka</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Fru Allansson</h2>
+            <div class="members__title">Svåger</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Kicki</h2>
+            <div class="members__title">Svåger</div>
           </div>
         </div>
     </div>
