--- a/src/views/partials/menu.ejs
+++ b/src/views/partials/menu.ejs
@@ -39,6 +39,7 @@
           </a>
       </li>
     </ul>
+    <div class="menu__list__click-catcher" data-js="menu-click-catcher"></div>
   </div>
   <div class="menu__click-catcher" data-js="menu-click-catcher"></div>
 </aside>
