--- a/src/views/partials/rules.ejs
+++ b/src/views/partials/rules.ejs
@@ -1,11 +1,16 @@
 <p class="rules__p">
   I Buk är det "högt i tak" det betyder att vi tar yttrande och åsiktsfriheten på allra högst allvar, men även om det råder
-  religionsfrihet i Buk är ingen som helst religiös propaganda accepterad. Våra religioner, vidskepligheter och villfarelser
+  religionsfrihet i Buk är ingen som helst religiös propaganda accepterad. <br> Våra religioner, vidskepligheter och villfarelser
   lämnar vi likt våra fruar hemma!
 </p>
 <img class="rules__img" src="images/logo.svg" alt="logo">
 <p class="rules__p">
   Alla Svågrar skall årligen (i närheten av Jul) skänka en Hamburgare = 150 SKR till ett välgörande ändamål, till vem eller
-  vilka fattas årligen ett nytt beslut. Detta för att synliggöra Buk och skapa goodwill och för att det är en jävligt reko
-  handling.
+  vilka fattas årligen ett nytt beslut. <br> Detta för att synliggöra Buk och skapa goodwill och för att det är en jävligt
+  reko handling.
+</p>
+<img class="rules__img" src="images/logo.svg" alt="logo">
+<p class="rules__p">
+  Vill du bli en del av vårat gäng krävs bara att du ser till att bli medbjuden av någon av våra Fullvärdiga medlemmar, en
+  så kallad Svåger. <br> För att bli en Svåger krävs att du har deltagit i 3st Burgarträffar samt accepterat våra stadgar.
 </p>
