--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -60,6 +60,10 @@ ul {
   color: #fff;
   float: left;
 }
+.menu__list__click-catcher {
+  width: 100%;
+  height: 100%;
+}
 .menu__click-catcher {
   float: left;
   width: calc(100% - 240px);
@@ -97,9 +101,10 @@ ul {
   position: absolute;
   top: 8px;
   left: 8px;
+  z-index: 1;
 }
 .menu__ul {
-  padding: 16px 0 0 16px;
+  padding: 58px 0 0 16px;
 }
 .menu__li {
   padding-bottom: 16px;
@@ -168,13 +173,18 @@ ul {
 .members {
   margin: 76px auto;
 }
+.members__section {
+  padding-bottom: 16px;
+}
 .members__name {
   padding-left: 16px;
   font-size: 18px;
+  text-align: center;
 }
 .members__title {
   font-size: 14px;
   padding-left: 16px;
+  text-align: center;
 }
 .members__img {
   padding: 16px 0 64px;
@@ -188,6 +198,10 @@ ul {
   font-size: 18px;
 }
 .burgers__resturant {
+  font-size: 14px;
+  padding-left: 16px;
+}
+.burgers__resturant-street {
   font-size: 14px;
   padding-left: 16px;
 }
