--- a/src/views/partials/schedule.ejs
+++ b/src/views/partials/schedule.ejs
@@ -8,10 +8,108 @@
       </td>
     </tr>
     <tr>
-      <td class="schedule__td">9 Nov 18.00</td>
+      <td class="schedule__td">10 Nov 18.00</td>
       <td class="schedule__td">
         <h2 class="schedule__h2">Burgersson</h2>
         <div class="schedule__text">Skanstorget 4</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">7 Dec 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Ester</h2>
+        <div class="schedule__text">Norra Torggatan 4</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">5 Jan 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Tugg Burgers</h2>
+        <div class="schedule__text">Drottninggatan 21</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">1 Feb 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Tio Pepe</h2>
+        <div class="schedule__text">Södra Torggatan 1</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">2 Mar 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">The Pig &amp; Whistle</h2>
+        <div class="schedule__text">Gibraltargatan 80</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">29 Mar 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Mr Döner</h2>
+        <div class="schedule__text">Gottskärsvägen 2</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">27 Apr 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">The Barn</h2>
+        <div class="schedule__text">Kyrkogatan 11</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">24 Maj 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Grevens Gastro</h2>
+        <div class="schedule__text">Västergatan 23A</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">22 Jun 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Butchers Market</h2>
+        <div class="schedule__text">Storgatan 47</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">19 Jul 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Street Friends</h2>
+        <div class="schedule__text">Norra Torggatan 6</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">17 Aug 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Texas Longhorn</h2>
+        <div class="schedule__text">Södra Vägen 7</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">13 Sep 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">The Square</h2>
+        <div class="schedule__text">Storgatan 35</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">12 Okt 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">2112</h2>
+        <div class="schedule__text">Magasinsgatan 5</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">8 Nov 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Tullen 8:12</h2>
+        <div class="schedule__text">Norra Torggatan 9D</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="schedule__td">7 Dec 18.00</td>
+      <td class="schedule__td">
+        <h2 class="schedule__h2">Stockyard Burgerjoint</h2>
+        <div class="schedule__text">Storgatan 51</div>
       </td>
     </tr>
   </tbody>
