--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -17,6 +17,10 @@
             <h2 class="members__name">Nicke Minag</h2>
             <div class="members__title">Vice Buktalare</div>
           </div>
+          <div class="members__section fidde">
+            <h2 class="members__name">Fidde</h2>
+            <div class="members__title">&star; Chief Technical Officer &star;</div>
+          </div>
           <div class="members__section">
             <h2 class="members__name">D Mossad</h2>
             <div class="members__title">Sgt at arms</div>
