--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -9,11 +9,11 @@
     <div id="root">
       <% include ./partials/menu %>
         <div class="members">
-          <div class="members__section">
+          <div class="members__section" data-js="up">
             <h2 class="members__name">Daniel</h2>
             <div class="members__title">Buktalare</div>
           </div>
-          <div class="members__section">
+          <div class="members__section" data-js="up">
             <h2 class="members__name">Nicke Minag</h2>
             <div class="members__title">Vice Buktalare</div>
           </div>
@@ -21,19 +21,19 @@
             <h2 class="members__name">Fidde</h2>
             <div class="members__title">&star; Chief Technical Officer &star;</div>
           </div>
-          <div class="members__section">
+          <div class="members__section" data-js="down">
             <h2 class="members__name">D Mossad</h2>
             <div class="members__title">Sgt at arms</div>
           </div>
-          <div class="members__section">
+          <div class="members__section" data-js="down">
             <h2 class="members__name">Tims Pappa</h2>
             <div class="members__title">Chief Toka</div>
           </div>
-          <div class="members__section">
+          <div class="members__section" data-js="down">
             <h2 class="members__name">Fru Allansson</h2>
             <div class="members__title">Svåger</div>
           </div>
-          <div class="members__section">
+          <div class="members__section" data-js="down">
             <h2 class="members__name">Kicki</h2>
             <div class="members__title">Svåger</div>
           </div>
