--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,4 +5,5 @@
   <title>BUK</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
   <link rel="stylesheet" href="/css/main3.css">
+  <link href="/css/c3.min.css" rel="stylesheet">
 </head>
