--- a/src/public/css/main3.css
+++ b/src/public/css/main3.css
@@ -204,10 +204,6 @@ ul {
   padding-left: 16px;
   font-size: 18px;
 }
-.burgers__resturant {
-  font-size: 14px;
-  padding-left: 16px;
-}
 .burgers__resturant-street {
   font-size: 14px;
   padding-left: 16px;
@@ -217,5 +213,12 @@ ul {
   width: 100%;
 }
 .burgers__rating {
-  padding: 0 0 64px 16px;
+  padding: 0 0 16px;
+  margin: 0 auto;
+}
+.burgers__rating--4 {
+  width: 192px;
+}
+.c3-legend-item {
+  fill: #fff;
 }
