--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -10,17 +10,16 @@
       <% include ./partials/menu %>
         <div class="burgers">
           <div class="burgers__section">
-            <h2 class="burgers__name">Double Cheese &amp; Bacon</h2>
-            <div class="burgers__resturant">2112 </div>
-            <div class="burgers__resturant-street">Magasinsgatan 5</div>
+            <h2 class="burgers__name">@Burger</h2>
+            <div class="burgers__resturant-street">Storgatan 25</div>
             <img class="burgers__img" src="/images/burger1.JPG" alt="burger">
-            <div class="burgers__rating">
-              <img src="/images/logo.svg" alt="logo">
+            <div class="burgers__rating burgers__rating--4">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
             </div>
+            <div id="chart"></div>
           </div>
         </div>
     </div>
