--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,1 +1,3 @@
-<script src="/js/main3.js" async></script>
+<script src="/js/d3.min.js"></script>
+<script src="/js/c3.min.js"></script>
+<script src="/js/main3.js"></script>
