updated with images

--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -12,7 +12,11 @@
           <div class="burgers__section">
             <h2 class="burgers__name">@Burger</h2>
             <div class="burgers__resturant-street">Storgatan 25</div>
-            <img class="burgers__img" src="/images/burger1.JPG" alt="burger">
+            <img class="burgers__img" src="/images/burger1.jpg" alt="burger">
+            <img class="burgers__img" src="/images/burger2.jpg" alt="burger">
+            <img class="burgers__img" src="/images/burger3.jpg" alt="burger">
+            <img class="burgers__img" src="/images/gubbar1.jpg" alt="burger">
+            <img class="burgers__img" src="/images/gubbar2.jpg" alt="burger">
             <div class="burgers__rating burgers__rating--4">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
