--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -15,8 +15,8 @@
             <img class="burgers__img" src="/images/burger1.jpg" alt="burger">
             <img class="burgers__img" src="/images/burger2.jpg" alt="burger">
             <img class="burgers__img" src="/images/burger3.jpg" alt="burger">
-            <img class="burgers__img" src="/images/gubbar1.jpg" alt="burger">
-            <img class="burgers__img" src="/images/gubbar2.jpg" alt="burger">
+            <img class="burgers__img" src="/images/gubbar1.jpg" alt="men">
+            <img class="burgers__img" src="/images/gubbar2.jpg" alt="men">
             <div class="burgers__rating burgers__rating--4">
               <img src="/images/logo.svg" alt="logo">
               <img src="/images/logo.svg" alt="logo">
