--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="/images/gubbar2.jpg" alt="members at table">
+          <img class="section__image" src="/images/2017-10-20-gubbar2.JPG" alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUK inkluderar</h2>
             <p class="section__text">
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="/images/burger1.jpg" alt="members at table">
+          <img class="section__image" src="/images/2017-10-20-burger1.JPG" alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUK äter kött</h2>
             <p class="section__text">
