--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="/images/men.jpg" alt="members at table">
+          <img class="section__image" src="/images/men.min.JPG" alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUK står och kissar
             </h2>
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="/images/hands.jpg" alt="members at table">
+          <img class="section__image" src="/images/hands.ming.JPG" alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUKS väl är mitt väl
             </h2>
