--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <script src="/js/d3.min.js"></script>
 <script src="/js/c3.min.js"></script>
-<script src="/js/main4.js"></script>
+<script src="/js/main5.js" async></script>
