--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="data:image/webp;base64,UklGRiIAAABXRUJQVlA4TBYAAAAvJ0AFAAdQ97rXvf8BICH8/65H9D9l" data-src="/images/men-min.JPG"
+          <img class="section__image" src="data:image/webp;base64,UklGRiIAAABXRUJQVlA4TBYAAAAvJ0AFAAdQ97rXvf8BICH8/65H9D9l" data-src="/images/men-min.jpg"
             alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUK står och kissar
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="section">
-          <img class="section__image" src="data:image/webp;base64,UklGRiIAAABXRUJQVlA4TBYAAAAvJ0AFAAdQ97rXvf8BICH8/65H9D9l" data-src="/images/hands-min.JPG"
+          <img class="section__image" src="data:image/webp;base64,UklGRiIAAABXRUJQVlA4TBYAAAAvJ0AFAAdQ97rXvf8BICH8/65H9D9l" data-src="/images/hands-min.jpg"
             alt="members at table">
           <div class="section__image-text-container">
             <h2 class="section__title">BUKS väl är mitt väl
