--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,8 +7,7 @@
   <meta name="theme-color" content="#ffffff">
   <title>BUK</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main5.css">
-  <link href="/css/c3.min.css" rel="stylesheet">
+  <link href="/c3.min.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
