--- a/src/views/partials/menu.ejs
+++ b/src/views/partials/menu.ejs
@@ -4,39 +4,39 @@
     <ul class="menu__ul">
       <li class="menu__li">
         <a href="/meetups" class="menu__link">
-        <img class="menu__img" src="/images/logo.svg" alt="logo">
-        <div class="menu__link-text-container">
+          <img class="menu__img" src="/logo.svg" alt="logo">
+          <div class="menu__link-text-container">
             <h2 class="menu__h2">Träffar</h2>
             <div class="menu__text">Tid &amp; Plats</div>
-        </div>
-      </a>
+          </div>
+        </a>
       </li>
       <li class="menu__li">
         <a href="/burgers" class="menu__link">
-          <img class="menu__img" src="/images/logo.svg" alt="logo">
+          <img class="menu__img" src="/logo.svg" alt="logo">
           <div class="menu__link-text-container">
-              <h2 class="menu__h2">Burgare</h2>
-              <div class="menu__text">Recensioner &amp; Bilder</div>
+            <h2 class="menu__h2">Burgare</h2>
+            <div class="menu__text">Recensioner &amp; Bilder</div>
           </div>
         </a>
       </li>
       <li class="menu__li">
         <a href="/members" class="menu__link">
-            <img class="menu__img" src="/images/logo.svg" alt="logo">
-            <div class="menu__link-text-container">
-                <h2 class="menu__h2">Medlemmar</h2>
-                <div class="menu__text">Våra goa gubbar</div>
-            </div>
-          </a>
+          <img class="menu__img" src="/logo.svg" alt="logo">
+          <div class="menu__link-text-container">
+            <h2 class="menu__h2">Medlemmar</h2>
+            <div class="menu__text">Våra goa gubbar</div>
+          </div>
+        </a>
       </li>
       <li class="menu__li">
         <a href="/rules" class="menu__link">
-            <img class="menu__img" src="/images/logo.svg" alt="logo">
-            <div class="menu__link-text-container">
-                <h2 class="menu__h2">Regler</h2>
-                <div class="menu__text">Ja, vi har sånt också</div>
-            </div>
-          </a>
+          <img class="menu__img" src="/logo.svg" alt="logo">
+          <div class="menu__link-text-container">
+            <h2 class="menu__h2">Regler</h2>
+            <div class="menu__text">Ja, vi har sånt också</div>
+          </div>
+        </a>
       </li>
     </ul>
     <div class="menu__list__click-catcher" data-js="menu-click-catcher"></div>
