--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -113,7 +113,7 @@ ul {
   width: 44px;
   height: 44px;
   cursor: pointer;
-  background: url(/images/menu_icon.svg);
+  background: url(/menu_icon.svg);
   position: absolute;
   top: 8px;
   left: 8px;
@@ -162,6 +162,7 @@ ul {
   font-size: 14px;
 }
 .rules__p {
+  text-align: center;
   margin: 76px auto;
   max-width: 500px;
   font-size: 18px;
