--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,7 +24,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-<link href="/main.dcd867b6729c512b12110fb82872446f.css" rel="stylesheet"></head>
+<link href="/main.2f69ef4df12e29c16a0ff59f7f261d32.css" rel="stylesheet"></head>
 
   <body>
     <label id="menu-button" for="menu-toggle"></label>
@@ -135,6 +135,6 @@
           </div>
         </div>
     </div>
-  <script type="text/javascript" src="/vendor.aa23e65dc923131a344b.bundle.js"></script><script type="text/javascript" src="/main.d74d0f9237290aef49b2.bundle.js"></script><script type="text/javascript" src="/burgers.aa9b8668dd628e33e1ec.bundle.js"></script></body>
+  <script type="text/javascript" src="/main.2d81ef26f4dd6e86c0f4.bundle.js"></script><script type="text/javascript" src="/vendor.28cba76ea37e6c8aa73e.bundle.js"></script><script type="text/javascript" src="/burgers.05268199e559a5305551.bundle.js"></script></body>
 
 </html>
