--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -13,6 +13,9 @@
 #root {
   margin: 0 auto;
 }
+img {
+  max-width: 100%;
+}
 h1, h2 {
   font-size: 20px;
 }
@@ -113,11 +116,16 @@ ul {
   width: 44px;
   height: 44px;
   cursor: pointer;
-  background: url(/menu_icon.svg);
-  position: absolute;
+  position: fixed;
+  opacity: 0;
+  transition: opacity 0.3s;
   top: 8px;
   left: 8px;
   z-index: 2;
+}
+#menu-button.menu-button-background {
+  opacity: 1;
+  background: url(/menu_icon.svg);
 }
 .menu__ul {
   padding: 58px 0 0 16px;
