--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -421,6 +421,6 @@
           </div>
         </div>
     </div>
-  <script type="text/javascript" src="/main.c119105a672017ed95f1.bundle.js"></script><script type="text/javascript" src="/vendor.488a9fb534b7088298b6.bundle.js"></script><script type="text/javascript" src="/burgers.360f8ee2115e6b678338.bundle.js"></script></body>
+  <script type="text/javascript" src="/main.d3584a8fb089ebfd284b.bundle.js"></script><script type="text/javascript" src="/burgers.1d0fff72f6b2a4492f93.bundle.js"></script></body>
 
 </html>
