--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -432,6 +432,6 @@
           </div>
         </div>
     </div>
-  <script type="text/javascript" src="/main.c119105a672017ed95f1.bundle.js"></script><script type="text/javascript" src="/vendor.488a9fb534b7088298b6.bundle.js"></script><script type="text/javascript" src="/burgers.360f8ee2115e6b678338.bundle.js"></script></body>
+  <script type="text/javascript" src="/main.d3584a8fb089ebfd284b.bundle.js"></script></body>
 
 </html>
