--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -411,16 +411,18 @@
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-burger3.webp" alt="burger">
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-gubbar1.webp" alt="men">
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-gubbar2.webp" alt="men">
-            <div class="burgers__rating burgers__rating--4">
+            <div class="burgers__rating burgers__rating--6">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+              <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+              <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
             </div>
             <div id="chart"></div>
           </div>
         </div>
     </div>
-  <script type="text/javascript" src="/runtime.acf6f74fa295822d7780.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.717d2180ddd4bc919585.bundle.js"></script><script type="text/javascript" src="/burgers.62b7bb9b4955c9d0cf65.bundle.js"></script></body>
+  <script type="text/javascript" src="/runtime.af0010b80348d0239643.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.0bb455291877352f0cdb.bundle.js"></script><script type="text/javascript" src="/burgers.d02e49cca11dd6c29765.bundle.js"></script></body>
 
 </html>
