--- a/src/views/templates/burgers.template.ejs
+++ b/src/views/templates/burgers.template.ejs
@@ -18,11 +18,13 @@
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-burger3.webp" alt="burger">
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-gubbar1.webp" alt="men">
             <img data-js="load-on-scroll" class="burgers__img" data-src="/2017-10-20-gubbar2.webp" alt="men">
-            <div class="burgers__rating burgers__rating--4">
+            <div class="burgers__rating burgers__rating--6">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
               <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+              <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+              <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
             </div>
             <div id="chart"></div>
           </div>
