--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -330,8 +330,17 @@
       width: 192px;
     }
 
+    .burgers__rating--6 {
+      width: 290px;
+    }
+
+    .c3-chart-arcs-title,
     .c3-legend-item {
       fill: #fff;
+    }
+
+    .c3-chart-arcs-title {
+      font-size: 4em;
     }
   </style>
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
