--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -424,7 +424,7 @@
             <div class="members__title">&star; Chief Technical Officer &star;</div>
           </div>
           <div class="members__section">
-            <h2 class="members__name">D Mossad</h2>
+            <h2 class="members__name">El Mojito</h2>
             <div class="members__title">Sgt at arms</div>
           </div>
           <div class="members__section">
@@ -432,12 +432,32 @@
             <div class="members__title">Chief Toka</div>
           </div>
           <div class="members__section">
-            <h2 class="members__name">Fru Allansson</h2>
+            <h2 class="members__name">H-Allansson</h2>
             <div class="members__title">Svåger</div>
           </div>
           <div class="members__section">
             <h2 class="members__name">Kicki</h2>
             <div class="members__title">Svåger</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">PG</h2>
+            <div class="members__title">Svåger</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Biffen</h2>
+            <div class="members__title">Svåger</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Roger B</h2>
+            <div class="members__title">Curly Fries</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Mats Mighty</h2>
+            <div class="members__title">Curly Fries</div>
+          </div>
+          <div class="members__section">
+            <h2 class="members__name">Fredrik</h2>
+            <div class="members__title">Curly Fries</div>
           </div>
         </div>
     </div>
