added more images and charts

--- a/src/views/meetups.ejs
+++ b/src/views/meetups.ejs
@@ -527,6 +527,6 @@
   </tbody>
 </table>
     </div>
-  <script type="text/javascript" src="/runtime.27032d784b2de85ad4c1.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.c4cdc50aaee0d9b3234d.bundle.js"></script></body>
+  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
 
 </html>
